--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -99,7 +99,7 @@
             <button type="submit" class="bg-green-500 text-white w-full px-4 py-2 rounded-lg">회원가입
             </button>
         </div>
-        <input TYPE="hidden" id="oauth" value="LOCAL">
+        <input TYPE="hidden" id="oauth" name="oauth" value="LOCAL">
     </form>
 </div>
 
