fix : change kakaoMap api key (register_information.html)

--- a/src/main/resources/templates/register_information.html
+++ b/src/main/resources/templates/register_information.html
@@ -392,7 +392,10 @@
   });
 </script>
 
+<!--<script type="text/javascript"-->
+<!--        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f4c83d9a4b318776896b44ad0eaf0ff8&libraries=services"></script>-->
 <script type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f4c83d9a4b318776896b44ad0eaf0ff8&libraries=services"></script>
+    src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=af9f39fb058e901de9cc5db4a059f55a&libraries=services"></script>
+
 </body>
 </html>
