--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,9 +19,11 @@
 <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm">
     <div class="mb-6 text-center">
         <picture>
-            <source srcset="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" type="image/png">
+            <source srcset="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96"
+                    type="image/png">
             <!-- 기본 이미지 (백업용) -->
-            <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" alt="Team Logo" class="mx-auto mb-4">
+            <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" alt="Team Logo"
+                 class="mx-auto mb-4">
         </picture>
     </div>
     <form id="loginForm">
@@ -38,69 +40,72 @@
                    required>
         </div>
         <div class="flex mb-4 space-x-2">
-            <button type="submit" class="w-1/2 mr-2 bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600">로그인</button>
-            <a href="/public/signup" class="w-1/2 ml-2 bg-green-500 text-white py-2 rounded-lg hover:bg-green-600 text-center">회원가입</a>
+            <button type="submit" class="w-1/2 mr-2 bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600">로그인
+            </button>
+            <a href="/public/signup"
+               class="w-1/2 ml-2 bg-green-500 text-white py-2 rounded-lg hover:bg-green-600 text-center">회원가입</a>
         </div>
     </form>
-    <a href="/auth/oauth/login/kakao"
+    <a id="kakaoLogin"
        class="block w-full bg-yellow-500 text-white py-2 rounded-lg hover:bg-yellow-600 text-center">카카오 로그인</a>
     <div id="error" class="alert alert-danger mt-4" style="display: none;">
         <p id="errorMessage" class="text-red-500 text-center">Invalid username or password.</p>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#loginForm').on('submit', function(event) {
-                event.preventDefault();
-                login();
-            });
+</div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#loginForm').on('submit', function (event) {
+            event.preventDefault();
+            login();
         });
+    });
 
-        function login() {
-            let username = $('#username').val();
-            let password = $('#password').val();
+    function login() {
+        let username = $('#username').val();
+        let password = $('#password').val();
 
-            if (username && password) {
-                username = username.trim();
-                password = password.trim();
-            } else {
-                alert('아이디 또는 비밀번호를 입력해주세요.');
-                return;
-            }
-
-            $.ajax({
-                type: "POST",
-                url: "/users/login",
-                contentType: "application/json",
-                data: JSON.stringify({ username: username, password: password }),
-                success: function(data, textStatus, xhr) {
-                    const accessToken = xhr.getResponseHeader('Authorization');
-                    if (accessToken) {
-                        localStorage.setItem('Authorization', accessToken);
-                        localStorage.setItem('username', username);
-                        localStorage.setItem('userId', data.userId);
-                        alert('로그인에 성공하였습니다!');
-                        window.location.href = '/public/main';
-                    } else {
-                        alert('Login failed: Access token not found.');
-                    }
-                },
-                error: function(xhr) {
-                    try {
-                        const errParts = xhr.responseText.split(",");
-                        let errMsg = errParts.find(part => part.includes('"msg"')).split(":")[1];
-                        errMsg = errMsg.replace(/["}]/g, '').trim();
-                        alert(errMsg);
-                    } catch (e) {
-                        alert("Login failed: " + xhr.responseText);
-                    }
-                }
-            });
+        if (username && password) {
+            username = username.trim();
+            password = password.trim();
+        } else {
+            alert('아이디 또는 비밀번호를 입력해주세요.');
+            return;
         }
 
-    </script>
-</div>
+        $.ajax({
+            type: "POST",
+            url: "/users/login",
+            contentType: "application/json",
+            data: JSON.stringify({username: username, password: password}),
+            success: function (data, textStatus, xhr) {
+                const accessToken = xhr.getResponseHeader('Authorization');
+                if (accessToken) {
+                    localStorage.setItem('Authorization', accessToken);
+                    localStorage.setItem('username', username);
+                    localStorage.setItem('userId', data.userId);
+                    alert('로그인에 성공하였습니다!');
+                    window.location.href = '/public/main';
+                } else {
+                    alert('Login failed: Access token not found.');
+                }
+            },
+            error: function (xhr) {
+                try {
+                    const errParts = xhr.responseText.split(",");
+                    let errMsg = errParts.find(part => part.includes('"msg"')).split(":")[1];
+                    errMsg = errMsg.replace(/["}]/g, '').trim();
+                    alert(errMsg);
+                } catch (e) {
+                    alert("Login failed: " + xhr.responseText);
+                }
+            }
+        });
+    }
 
+    document.getElementById('kakaoLogin').onclick = function () {
+        window.location.href = "/oauth/login/kakao";
+    };
+</script>
 </body>
 </html>
