--- a/src/main/resources/templates/MyPage.html
+++ b/src/main/resources/templates/MyPage.html
@@ -205,6 +205,7 @@
   </div>
   <div class="mt-12 border-t pt-8">
     <h2 class="text-2xl font-bold mb-4">내 게시물</h2>
+    <a href="/public/userboardCollection" class="mr-4">더보기</a>
     <div id="userboardGrid" class="userboard-grid">
       <!-- UserBoard 아이템들이 여기에 동적으로 추가됩니다 -->
     </div>
