--- a/src/main/resources/templates/profileCollection.html
+++ b/src/main/resources/templates/profileCollection.html
@@ -24,6 +24,7 @@
       <a href="/public/profileCollection" class="mr-4">오늘의 동친</a>
       <a href="/public/meetsCollection" class="text-gray-700">내 주변 모임</a>
       <a href="/public/MyPage" class="text-gray-700">My Page</a>
+      <a href="/public/userboardCollection" class="mr-4">내 게시물 작성하기</a>
     </nav>
   </div>
   <div class="flex items-center">
