--- a/src/main/resources/templates/meets.html
+++ b/src/main/resources/templates/meets.html
@@ -102,7 +102,7 @@
     });
     document.getElementById('InvitationList').addEventListener('click', async () => {
 
-        window.open(`http://localhost:8080/InvitationList.html?meetId=${meetId}`, '신청 목록', `width=800,height=600,top=${(screen.height - 600) / 2},left=${(screen.width - 800) / 2}`);
+        window.open(`/InvitationList.html?meetId=${meetId}`, '신청 목록', `width=800,height=600,top=${(screen.height - 600) / 2},left=${(screen.width - 800) / 2}`);
     });
 
     document.getElementById('participant').addEventListener('click', async function () {
