--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -143,7 +143,7 @@
   function connect() {
     if (isConnected) return;
     console.log("Attempting to connect to WebSocket");
-    const socket = new SockJS('http://localhost:8080/ws');
+    const socket = new SockJS('https://pallow.net/ws');
     stompClient = Stomp.over(socket);
     stompClient.connect({'Authorization': accessToken}, onConnected, onError);
   }
