add : 회원탈퇴 기능 추가 fix : username, userid 저장 추가, 닉네임으로 표현되게 수정

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -84,11 +84,15 @@
                 const accessToken = xhr.getResponseHeader('Authorization');
                 if (accessToken) {
                     localStorage.setItem('Authorization', accessToken);
+                    localStorage.setItem('username', username);
+                    localStorage.setItem('userId', data.userId);
                     alert('로그인에 성공하였습니다!');
                     window.location.href = '/public/main';
                 } else if (data.statusCode === 302 && data.redirectUrl) {
                     alert('프로필을 작성해주세요!');
                     window.location.href = data.redirectUrl;
+                } else if (data.statusCode === 401) {
+                    alert("삭제된 유저입니다.")
                 } else {
                     alert('Login failed: Access token not found.');
                 }
