--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -91,17 +91,16 @@
 <header class="flex justify-between items-center p-4 bg-white shadow">
   <div class="flex items-center">
     <a href="/public/main">
-      <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96"
-           width="70" height="70" alt="Logo" class="mr-4">
+      <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70" height="70" alt="Logo" class="mr-4">
     </a>
     <nav>
+      <a href="/public/main" class="mr-4">홈</a>
       <a href="/public/profileCollection" class="mr-4">오늘의 동친</a>
       <a href="/public/meetsCollection" class="mr-4">내 주변 모임</a>
       <a href="/public/MyPage" class="mr-4">MyPage</a>
       <a href="/public/userboardCollection" class="mr-4">내 게시물 작성하기</a>
     </nav>
   </div>
-
   <div class="flex items-center">
     <button id="logoutBtn" class="bg-black text-white px-4 py-2 rounded">로그아웃</button>
   </div>
@@ -149,12 +148,12 @@
     <div class="carousel-dots mt-4" id="dots3"></div>
   </section>
 
-<!--  <section class="bg-blue-100 p-4 rounded shadow">-->
-<!--    <h2 class="text-xl font-bold mb-4">유료결제만 해도 받는 엘리트 멤버십 혜택</h2>-->
-<!--    <p class="mb-4">결제만 했다면 멤버십 할인가로 예약할 수 있어요.</p>-->
-<!--    <a href="/payments" class="bg-blue-500 text-white px-4 py-2 rounded">결제 창</a>-->
-<!--    <a href="/benefits" class="bg-gray-200 text-gray-700 px-4 py-2 rounded">혜택 자세히 보기</a>-->
-<!--  </section>-->
+  <!--  <section class="bg-blue-100 p-4 rounded shadow">-->
+  <!--    <h2 class="text-xl font-bold mb-4">유료결제만 해도 받는 엘리트 멤버십 혜택</h2>-->
+  <!--    <p class="mb-4">결제만 했다면 멤버십 할인가로 예약할 수 있어요.</p>-->
+  <!--    <a href="/payments" class="bg-blue-500 text-white px-4 py-2 rounded">결제 창</a>-->
+  <!--    <a href="/benefits" class="bg-gray-200 text-gray-700 px-4 py-2 rounded">혜택 자세히 보기</a>-->
+  <!--  </section>-->
 </main>
 <button id="chatBtn" class="p-2 rounded flex flex-col items-center">
   <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="currentColor"
