--- a/src/main/resources/templates/profileCollection.html
+++ b/src/main/resources/templates/profileCollection.html
@@ -22,13 +22,13 @@
     <nav>
       <a href="/public/main" class="mr-4">홈</a>
       <a href="/public/profileCollection" class="mr-4">오늘의 동친</a>
-      <a href="/public/meetsCollection" class="text-gray-700">내 주변 모임</a>
-      <a href="/public/MyPage" class="text-gray-700">My Page</a>
+      <a href="/public/meetsCollection" class="mr-4">내 주변 모임</a>
+      <a href="/public/MyPage" class="mr-4">MyPage</a>
       <a href="/public/userboardCollection" class="mr-4">내 게시물 작성하기</a>
     </nav>
   </div>
   <div class="flex items-center">
-  <button class="bg-black text-white px-4 py-2 rounded" id="logoutButton">로그아웃</button>
+    <button id="logoutBtn" class="bg-black text-white px-4 py-2 rounded">로그아웃</button>
   </div>
 </header>
 <main class="container mx-auto px-4 py-8">
@@ -60,7 +60,7 @@
         profileCard.innerHTML = `
           <img src="${profile.image}" alt="Profile Photo" class="w-full h-64 object-cover">
           <div class="p-4">
-            <h2 class="text-xl font-semibold">${profile.name}</h2>
+            <h2 class="text-xl font-semibold">${profile.nickname}</h2>
             <p class="text-gray-700">${profile.position}</p>
             <p class="text-gray-600">MBTI: ${profile.mbti}</p>
             <p class="text-gray-600">Hobby: ${profile.hobby}</p>
