feat : 로컬스토리지 불필요한 유저정보 삭제 meets 새로운 창으로 생성

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -84,6 +84,8 @@
                 const accessToken = xhr.getResponseHeader('Authorization');
                 if (accessToken) {
                     localStorage.setItem('Authorization', accessToken);
+                    localStorage.setItem('username', username);
+                    localStorage.setItem('userId', data.userId);
                     alert('로그인에 성공하였습니다!');
                     window.location.href = '/public/main';
                 } else if (data.statusCode === 302 && data.redirectUrl) {
