feat : 로그인 oauth 컬럼추가, 콜벡 alert 안내

--- a/src/main/resources/templates/callback.html
+++ b/src/main/resources/templates/callback.html
@@ -33,6 +33,7 @@
                         console.log("Response data received:", data);
                         if (data.redirectUrl) {
                             // Redirect to the URL provided by the server
+                            alert("회원 가입이 필요합니다.")
                             console.log("Redirecting to:", data.redirectUrl);
                             window.location.href = data.redirectUrl;
                         }
